docs: consolidate contrast_weights Rd; regen docs and pkgdown config

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,7 +38,7 @@ Suggests:
 Remotes:
     bbuchsbaum/fmrihrf
 VignetteBuilder: knitr
-URL: https://github.com/bbuchsbaum/fmridesign
+URL: https://github.com/bbuchsbaum/fmridesign, https://bbuchsbaum.github.io/fmridesign/
 BugReports: https://github.com/bbuchsbaum/fmridesign/issues
 RoxygenNote: 7.3.2.9000
 Roxygen: list(markdown = TRUE)
