--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,8 @@ S3method(contrasts,hrfspec)
 S3method(convolve,event_term)
 S3method(correlation_map,baseline_model)
 S3method(correlation_map,event_model)
+S3method(design_colmap,baseline_model)
+S3method(design_colmap,event_model)
 S3method(design_map,baseline_model)
 S3method(design_map,event_model)
 S3method(design_matrix,baseline_model)
@@ -113,6 +115,9 @@ S3method(print,event_term)
 S3method(print,fmri_term)
 S3method(print,poly_contrast_spec)
 S3method(regressors,event_term)
+S3method(residualize,baseline_model)
+S3method(residualize,event_model)
+S3method(residualize,matrix)
 S3method(shortnames,event_term)
 S3method(split_onsets,event_term)
 S3method(sub_basis,BSpline)
@@ -162,6 +167,7 @@ export(convolve)
 export(convolve_design)
 export(correlation_map)
 export(covariate)
+export(design_colmap)
 export(design_map)
 export(design_matrix)
 export(durations)
@@ -203,6 +209,7 @@ export(register_hrfspec_extension)
 export(regressor)
 export(regressors)
 export(requires_external_processing)
+export(residualize)
 export(samples)
 export(sampling_frame)
 export(sanitize)
