--- a/NAMESPACE
+++ b/NAMESPACE
@@ -94,6 +94,7 @@ S3method(onsets,convolved_term)
 S3method(onsets,event_term)
 S3method(plot,baseline_model)
 S3method(plot,event_model)
+S3method(plot,sampling_frame)
 S3method(plot_contrasts,event_model)
 S3method(predict,BSpline)
 S3method(predict,Ident)
@@ -114,6 +115,7 @@ S3method(print,event_model)
 S3method(print,event_term)
 S3method(print,fmri_term)
 S3method(print,poly_contrast_spec)
+S3method(print,sampling_frame)
 S3method(regressors,event_term)
 S3method(residualize,baseline_model)
 S3method(residualize,event_model)
@@ -293,6 +295,8 @@ importFrom(ggplot2,element_blank)
 importFrom(ggplot2,element_text)
 importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_line)
+importFrom(ggplot2,geom_segment)
+importFrom(ggplot2,geom_text)
 importFrom(ggplot2,geom_tile)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,labs)
@@ -300,6 +304,7 @@ importFrom(ggplot2,scale_color_brewer)
 importFrom(ggplot2,scale_color_discrete)
 importFrom(ggplot2,scale_fill_gradient2)
 importFrom(ggplot2,scale_fill_gradientn)
+importFrom(ggplot2,scale_x_continuous)
 importFrom(ggplot2,scale_y_reverse)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_minimal)
@@ -342,6 +347,7 @@ importFrom(stats,cor)
 importFrom(stats,dgamma)
 importFrom(stats,dnorm)
 importFrom(stats,formula)
+importFrom(stats,median)
 importFrom(stats,model.matrix)
 importFrom(stats,poly)
 importFrom(stats,predict)
