--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,7 +38,7 @@ Suggests:
     rmarkdown,
     covr
 VignetteBuilder: knitr
-Config/Needs/website: bbuchsbaum/albersdown
+Config/Needs/website: bbuchsbaum/albersdown, albersdown
 URL: https://github.com/bbuchsbaum/fmridesign, https://bbuchsbaum.github.io/fmridesign/
 BugReports: https://github.com/bbuchsbaum/fmridesign/issues
 RoxygenNote: 7.3.3
