feat: export basis_suffix

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -149,6 +149,7 @@ export(as_hrf)
 export(baseline)
 export(baseline_model)
 export(baseline_terms)
+export(basis_suffix)
 export(block)
 export(blockids)
 export(blocklens)
