feat: export feature_suffix

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -186,6 +186,7 @@ export(event_term)
 export(event_terms)
 export(event_variable)
 export(events)
+export(feature_suffix)
 export(gen_hrf)
 export(get_all_external_hrf_functions)
 export(get_external_hrfspec_functions)
