feat: export sanitize

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -216,6 +216,7 @@ export(requires_external_processing)
 export(residualize)
 export(samples)
 export(sampling_frame)
+export(sanitize)
 export(shortnames)
 export(sliding_window_contrasts)
 export(split_onsets)
