feat: export split_by_block

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -219,6 +219,7 @@ export(sampling_frame)
 export(sanitize)
 export(shortnames)
 export(sliding_window_contrasts)
+export(split_by_block)
 export(split_onsets)
 export(sub_basis)
 export(term_indices)
